--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.2.0-beta04'
     }
 }
 
@@ -35,7 +35,6 @@ allprojects {
 ext {
     mockitoVersion = '2.18.3'
     robolectricVersion = '3.8'
-    supportLibraryVersion = '27.1.1'
 }
 
 task clean(type: Delete) {
